Handling all the what I want it to do 1st phase

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <div class='playerA'>Player A: <span class='scoreA'> some something</span></div>
 <div></div>
 <div class='buttonHolder'>
-  <button class='deal'>Deal</button>
+  <button class='go'>Go</button>
+  <button class='start'>Start</button>
 </div>
 <div></div>
 <div></div>
