fixing stuff logic wise on project and more

--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
 <body>
 <!-- <h1>Game of War</h1> -->
 <!-- <button class='start'>Start</button> -->
-<div class='playerA'>Player A: <span class='scoreA'> some something</span></div>
-<div></div>
+<div class='playerA'>Player A: <span class='scoreA'> 123</span></div>
+<div>
 <div class='buttonHolder'>
   <button class='go'>Go</button>
   <button class='start'>Start</button>
 </div>
-<div></div>
-<div></div>
-<div class='playerB'>Player B: <span class='scoreB'> something also</span></div>
+
+<div class='board'>
+  <div class='row-one'>
+    <div class='card' data-row='0' data-col='0'></div>
+    <div class='card' data-row='0' data-col='1'></div>
+  </div>
+
+  <div class='row-two'>
+    <div class='card' data-row='1' data-col='0'></div>
+    <div class='card' data-row='1' data-col='1'></div>
+  </div>
+</div>
+
+<div class='playerB'>Player B: <span class='scoreB'> 123</span></div>
 <script src='main.js'></script>
 </body>
 </html>
