--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class='playerA'>Player A: <span class='scoreA'> 123</span></div>
 <div>
 <div class='buttonHolder'>
-  <button class='go'>Go</button>
+  <button class='hit'>Hit</button>
   <button class='start'>Start</button>
 </div>
 
