the war function does not return cards

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
 <head>
   <title></title>
@@ -7,26 +7,25 @@
 <body>
 <!-- <h1>Game of War</h1> -->
 <!-- <button class='start'>Start</button> -->
-<div class='playerA'>Player A: <span class='scoreA'> 123</span></div>
+<div class='playerA'>Captain Morgan</div>
 <div>
-<div class='buttonHolder'>
-  <button class='hit'>Hit</button>
-  <button class='start'>Start</button>
-</div>
 
 <div class='board'>
   <div class='row-one'>
-    <div class='card' data-row='0' data-col='0'></div>
-    <div class='card' data-row='0' data-col='1'></div>
+    <div class='deckA' data-row='0' data-col='0'></div>
+    <div class='handA' data-row='0' data-col='1'></div>
   </div>
-
+<div class='buttonHolder'>
+  <button class='start'>Start</button>
+  <button class='hit'>Hit</button>
+</div>
   <div class='row-two'>
-    <div class='card' data-row='1' data-col='0'></div>
-    <div class='card' data-row='1' data-col='1'></div>
+    <div class='handB' data-row='1' data-col='0'></div>
+    <div class='deckB' data-row='1' data-col='1'></div>
   </div>
 </div>
 
-<div class='playerB'>Player B: <span class='scoreB'> 123</span></div>
+<div class='playerB'>Jack Daniels</div>
 <script src='main.js'></script>
 </body>
 </html>
