--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <div class='board'>
   <div class='row-one'>
     <div class='deckA' data-row='0' data-col='0'></div>
-    <div class='handA' data-row='0' data-col='1'></div>
+    <div class='handA' data-row='0' data-col='1'><span class='valueA'></span></div>
+    <div class='deckAamount' data-row='0' data-col='2'><p>Captain Morgan:<span class='scoreA'>0</span></p><p>Jack Daniels:<span class ='scoreB'>0</span></p></div>
   </div>
 <div class='buttonHolder'>
   <button class='start'>Start</button>
   <button class='hit'>Hit</button>
 </div>
   <div class='row-two'>
-    <div class='handB' data-row='1' data-col='0'></div>
-    <div class='deckB' data-row='1' data-col='1'></div>
-  </div>
+    <div class='handB' data-row='1' data-col='1'><span class='valueB'></span></div>
+    <div class='deckB' data-row='1' data-col='2'></div>
 </div>
 
 <div class='playerB'>Jack Daniels</div>
