--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
   <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Pirate King's War</title>
   <link rel='stylesheet' href='style.css'>
 </head>
 <body>
-<!-- <h1>Game of War</h1> -->
-<!-- <button class='start'>Start</button> -->
 <div class='playerA'>Captain Morgan</div>
 <div>
 
