changed the font for playerA

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Pirate King's War</title>
   <link rel='stylesheet' href='style.css'>
+  <link href="https://fonts.googleapis.com/css?family=Pirata+One" rel="stylesheet" type='text/css'>
+
 </head>
 <body>
 <div class='playerA'>Captain Morgan</div>
